--- a/gameshare.html
+++ b/gameshare.html
@@ -51,7 +51,7 @@
     .open-game-div {
         background: #5c96dd;
         width: 100%;
-        height: 30px;
+        height: 50px;
         position: fixed;
         top: 0;
         opacity:0.9;
@@ -85,7 +85,7 @@
 <script>
 
     let ua = navigator.userAgent;
-    let url_quick_game = "http://quickgame/22424";
+    let url_quick_game = "quickgame://quickgame/22424";
     let url_happy_play = "haplay://sfhaifh/sff2";
 
     document.querySelector('#open-game-button').onclick = function (ele) {
