--- a/gameshare.html
+++ b/gameshare.html
@@ -86,7 +86,7 @@
 
     let ua = navigator.userAgent;
     let url_quick_game = "quickgame://quickgame/22424";
-    let url_happy_play = "haplay://sfhaifh/sff2";
+    let url_happy_play = "vivogame://hybrid/gamecontent?game_id=101&game_package='com.fly.bird'";
 
     document.querySelector('#open-game-button').onclick = function (ele) {
         const isWeixin = !!/MicroMessenger/i.test(ua);
@@ -107,7 +107,17 @@
         const t = Date.now();
         setTimeout(function () {
             if (Date.now() - t < 1200){
-                location.href = 'https://www.baidu.com';
+                openHappyGame();
+            }
+        },1000);
+    }
+
+    function openHappyGame(){
+        location.href = url_happy_play;
+        const t = Date.now();
+        setTimeout(function () {
+            if (Date.now() - t < 1200){
+                location.href = 'https://www.sina.com';
             }
         },1000);
     }
