--- a/gameshare.html
+++ b/gameshare.html
@@ -87,6 +87,7 @@
     let ua = navigator.userAgent;
     let url_quick_game = "quickgame://quickgame/22424";
     let url_happy_play = "vivogame://hybrid/gamecontent?game_id=101&game_package='com.fly.bird'";
+    let apkDownloadUrl = 'https://jspz1111.github.io/username.github.io/happy_game.apk'
 
     document.querySelector('#open-game-button').onclick = function (ele) {
         const isWeixin = !!/MicroMessenger/i.test(ua);
@@ -117,7 +118,7 @@
         const t = Date.now();
         setTimeout(function () {
             if (Date.now() - t < 1200){
-                location.href = 'https://www.sina.com';
+                location.href = apkDownloadUrl;
             }
         },1000);
     }
