--- a/gameshare.html
+++ b/gameshare.html
@@ -103,7 +103,7 @@
     }
 
     function openQuickGame(){
-        const t = Date.now();
+        var t = Date.now();
         location.href = url_quick_game;
         setTimeout(function () {
             if (Date.now() - t < 1200){
@@ -113,7 +113,7 @@
     }
 
     function openHappyGame(){
-        const t = Date.now();
+        var t = Date.now();
         location.href = url_happy_play;
         setTimeout(function () {
             if (Date.now() - t < 1200){
