--- a/gameshare.html
+++ b/gameshare.html
@@ -16,7 +16,7 @@
         width: 100%;
         height: 100%;
         z-index: 998;
-        display: block;
+        display: none;
     }
 
     .wxtip-icon {
